# adventofcode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: test.yml
adventofcode/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
adventofcode/day1/: __init__.py
adventofcode/day2/: __init__.py
adventofcode/day3/: __init__.py
adventofcode/day4/: __init__.py
adventofcode/day5/: __init__.py
adventofcode/day6/: __init__.py
adventofcode/year2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
adventofcode/year2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
stubs/: aocd.pyi
tests/: conftest.py  test_adventofcode.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py
tests/unit/: test_day1.py
tests/year2022/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/year2023/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py
