[options]
python_requires = >=3.11
install_requires =
	advent-of-code-data
	attrs

[options.extras_require]
lint =
	pre-commit>=2.20.0

type =
	mypy

test =
	coverage
	pytest

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool:pytest]
norecursedirs = .*

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[coverage:paths]
source =
	adventofcode
	.tox/py*/lib/python*/site-packages/adventofcode

[coverage:report]
fail_under = 100
show_missing = true

[coverage:run]
branch = true
parallel = true
source = adventofcode
